--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,20 @@ header h1 {
 }
 
 
+Fast-download-btn {
+    padding: 8px 12px;
+    background-color: #28a745;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-left: auto;
+}
+
+.Fast-download-btn:hover {
+    background-color: #218838;
+}
+
+
 .view-details-btn, .download-btn {
     display: inline-block;
     padding: 12px 20px;
