--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ header h1 {
 }
 
 
-Fast-download-btn {
+.Fast-download-btn {
     padding: 8px 12px;
     background-color: #28a745;
     color: white;
